--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,5 @@
 Changes in version 0.99.0 (2020-09-15)
 + Submitted to Bioconductor
+
+Changes in version 0.99.4 (2022-02-1)
++ Fixed bug in normalizeTomo()
